- New admin command: "SCRAMBLE". Scrambles/randomises which players are in which team.
- New vote: /callvote scramble: Executes the SCRAMBLE command.
- Teams now retain their spawn for later respawing
- New ladderlog entries:
	- PLAYER_RESPAWN <RESPAWNEE> <RESPAWNEE'S TEAM> [RESPAWNER]
	- DEATH_DEATHZONE <player>
	- WINZONE_PLAYER_ENTER <player>
    - ONLINE_TEAM <name> <total score>
- Changes to the ONLINE_PLAYER ladderlog event:
    - It is now enabled by default.
    - Added additional information about the access level and total score of
      the player.
    - Players are written in the order of their launch position on the team.
- Removed POSITIONS ladderlog event. ONLINE_PLAYER now includes all information
  it provided.
- Ladderlog events now have a specification that defines their format. See
  settings_dedicated.cfg for more documentation.
- New commands LADDERLOG_SCRIPT_WRITE, and LADDERLOG_SCRIPT_WRITE_ALL that
  allow better control over which events are sent to spawned scripts.
- The CONSOLE_LADDER_LOG setting has been removed. Its functionality has been
  reimplemented in scripts/examples/echo.sh.
- New warmup mode:
    - DO_WARMUP N>0 will make the game enter warmup mode after each N matches
    - In warmup mode, players can use the /ready command to set themselves ready and start the match
    - Team joins/switches/leaves(when using /teamleave) are done instantly
    - By default, players respawn in warmup mode (WARMUP_RESPAWN_TIME)
    - The game starts when each team has ready/total > WARMUP_MIN_READY(0.51)
    - However, there should be at least WARMUP_MIN_PLAYERS(2) humans before the warmup can end
    - Readiness state is synced to clients so that newer ones can show an icon on the scoreboard
    - ALL_READY makes the game behave as if all players had readied up.
    - New ladderlog entries:
        - NEW_WARMUP replaces NEW_MATCH when appropriate: NEW_WARMUP <N> <TIMESTAMP>
          with N the number of matches to be played consecutively